# mantis-monitor

./: .gitignore  .readthedocs.yaml  README.md  README.rst  SETUP_AI.md  SETUP_GPU.md  SETUP_HPC.md  SETUP_TESTS.md  config-example.yaml  config.yaml  intex.rst  pyproject.toml  setup.cfg  test-config.yaml
benchmark-examples/: aefoam.py  miniapp_testing.py  test-config.yaml  test.py  xsbench.py
doc/: api.rst  index.rst
src/: .gitignore  MiniappTest.csv  MiniappTest.pkl  benchmark.py  collector.py  configuration.py  formatter.py  monitor.py  testrun.py
tests/: test_1_echo.yaml  test_2_sleep.yaml  test_ai_llamacpp_amd.yaml  test_ai_llamacpp_cpu.yaml  test_ai_llamacpp_nvidia.yaml  test_ai_mlperf_amd.yaml  test_ai_mlperf_cpu.yaml  test_ai_mlperf_nvidia.yaml  test_ai_onnx_amd.yaml  test_ai_onnx_cpu.yaml  test_ai_onnx_nvidia.yaml  test_bpf_io_latency.yaml  test_hpc_amg2023_amd.yaml  test_hpc_amg2023_cpu.yaml  test_hpc_amg2023_nvidia.yaml  test_hpc_babelstream_amd.yaml  test_hpc_babelstream_cpu.yaml  test_hpc_babelstream_nvidia.yaml  test_hpc_cloverleaf_amd.yaml  test_hpc_cloverleaf_cpu.yaml  test_hpc_cloverleaf_nvidia.yaml  test_hpc_comd_cpu.yaml  test_hpc_comd_nvidia.yaml  test_hpc_gapbs_cpu.yaml  test_hpc_gromacs_amd.yaml  test_hpc_gromacs_cpu.yaml  test_hpc_gromacs_nvidia.yaml  test_hpc_gunrock_nvidia.yaml  test_hpc_haccmk_cpu.yaml  test_hpc_haccmk_nvidia.yaml  test_hpc_heffte_amd.yaml  test_hpc_heffte_cpu.yaml  test_hpc_heffte_nvidia.yaml  test_hpc_hpcg_amd.yaml  test_hpc_hpcg_cpu.yaml  test_hpc_hpcg_nvidia.yaml  test_hpc_hpgmg_cpu.yaml  test_hpc_hpgmg_nvidia.yaml  (+55 more)
(+81 files in other folders)
