[metadata]
name = mantis-monitor
version = 0.0.3
author = Melanie Cornelius
author_email = melanie.e.cornelius@gmail.com
description = Multipurpose benchmarking monitor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mseryn/mantis-monitor
project_urls =
    Bug Tracker = https://github.com/mseryn/mantis-monitor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml >=5.1
    pandas

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	mantis-monitor = mantis_monitor.monitor:run
